# oxdp

./: .gitignore  README.md
scripts/: modify_conll.py  preprocess-conll.py  replace_numbers.sh
src/: CMakeLists.txt
src/corpus/: CMakeLists.txt  context.cc  context.h  corpus.cc  corpus.h  corpus_interface.h  data_point.cc  data_point.h  data_set.cc  data_set.h  data_set_interface.h  dict.cc  dict.h  model_config.cc  model_config.h  model_interface.h  ngram_model.cc  ngram_model.h  parallel_sentence.cc  parallel_sentence.h  parallel_sentence_corpus.cc  parallel_sentence_corpus.h  parse_data_set.cc  parse_data_set.h  parsed_corpus.cc  parsed_corpus.h  parsed_sentence.cc  parsed_sentence.h  parsed_weights_interface.h  sentence.cc  sentence.h  sentence_corpus.cc  sentence_corpus.h  tagged_sentence.cc  tagged_sentence.h  utils.h  weights_interface.h
src/cpyp/: boost_serializers.h  crp.h  crp_table_manager.h  gamma_poisson.h  m.h  mf_crp.h  msparse_vector.h  random.h  slice_sampler.h  tied_parameter_resampler.h
src/gdp/: CMakeLists.txt  Makefile  accuracy_counts.cc  accuracy_counts.h  aligned_ngram_model.cc  aligned_ngram_model.h  arc_eager_labelled_parse_model.cc  arc_eager_labelled_parse_model.h  arc_eager_labelled_parser.cc  arc_eager_labelled_parser.h  arc_eager_parse_model.cc  arc_eager_parse_model.h  arc_eager_parser.cc  arc_eager_parser.h  arc_list.h  arc_standard_labelled_parse_model.cc  arc_standard_labelled_parse_model.h  arc_standard_labelled_parser.cc  arc_standard_labelled_parser.h  arc_standard_parse_model.cc  arc_standard_parse_model.h  arc_standard_parser.cc  arc_standard_parser.h  dependency_parse.py  eisner_parse_model.cc  eisner_parse_model.h  eisner_parser.cc  eisner_parser.h  evaluate_lbl.cc  extract_word_vectors.cc  hpyp_dp.cc  hpyp_dp_generate.cc  hpyp_dp_parse.h  hpyp_dp_test.h  hpyp_dp_train.cc  hpyp_dp_train.h  hpyplm_contexts.cc  lbl_dp_model.cc  lbl_dp_model.h  lbl_gec_model.cc  (+31 more)
src/hpyplm/: Makefile  cdec_ff_hpyplm.cc  chpyplm.cc  chpyplm.h  chpyplm_generate.cc  dhpyplm.cc  dhpyplm.h  dhpyplm_query.cc  dhpyplm_train.cc  hpyplm.cc  hpyplm.h  hpyplm_conll.cc  hpyplm_generate.cc  hpyplm_query.cc  hpyplm_train.cc
src/lbl/: CMakeLists.txt  bloom_filter_populator.cc  cdec_ff_lbl.cc  cdec_lbl_mapper.cc  cdec_lbl_mapper.h  class_distribution.cc  class_distribution.h  collision_counter.cc  config.cc  config.h  context_cache.h  context_processor.cc  context_processor.h  discriminative_metadata.cc  discriminative_metadata.h  discriminative_weights.cc  discriminative_weights.h  evaluate.cc  extract_word_vectors.cc  factored_maxent_metadata.cc  factored_maxent_metadata.h  factored_metadata.cc  factored_metadata.h  factored_weights.cc  factored_weights.h  feature_context_extractor.h  feature_context_mapper.cc  feature_matcher.cc  global_factored_maxent_weights.cc  global_factored_maxent_weights.h  metadata.cc  metadata.h  minibatch_words.cc  minibatch_words.h  model.cc  model.h  model_utils.cc  model_utils.h  ngram_filter.cc  operators.h  (+21 more)
src/lbl/tests/: CMakeLists.txt  bloom_filter_populator_test.cc  cdec_lbl_mapper_test.cc  cdec_rule_converter_test.cc  class_context_extractor_test.cc  collision_counter_test.cc  context_processor_test.cc  factored_metadata_test.cc  factored_weights_test.cc  feature_context_mapper_test.cc  feature_exact_filter_test.cc  feature_matcher_test.cc  global_factored_maxent_weights_test.cc  global_feature_indexes_pair_test.cc  metadata_test.cc  minibatch_words_test.cc  model_utils_test.cc  ngram_filter_test.cc  sgd_test.h  sparse_global_feature_store_test.cc  sparse_minibatch_feature_store_test.cc  train_factored_sgd_test.cc  train_maxent_sgd_test.cc  train_sgd_test.cc  unconstrained_feature_store_test.cc  utils_test.cc  weights_test.cc  word_context_extractor_test.cc
src/pyp/: CMakeLists.txt  Makefile  capyplm.h  chpyplm.cc  chpyplm.h  chpyplm_generate.cc  constants.h  crp.h  crp_table_manager.h  dapyplm.cc  dapyplm.h  dapyplm_query.cc  dapyplm_train.cc  gamma_poisson.h  hpyplm_conll.cc  hpyplm_query.cc  logval.h  mf_crp.h  model_config.cc  model_config.h  msparse_vector.h  parsed_calex_pyp_weights.cc  parsed_calex_pyp_weights.h  parsed_chlex_pyp_weights.cc  parsed_chlex_pyp_weights.h  parsed_lex_pyp_weights.cc  parsed_lex_pyp_weights.h  parsed_pyp_weights.cc  parsed_pyp_weights.h  pyp_model.cc  pyp_model.h  pyp_parsed_weights_interface.h  pyp_weights.cc  pyp_weights.h  pyp_weights_interface.h  pyplm.h  pyplm_test.cc  random.h  slice_sampler.h  tied_parameter_resampler.h  (+3 more)
src/utils/: constants.h  m.h  random.h
